github auth error took longto commit